# volt-exercise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  exercises.db  pyproject.toml  server.py
data/: enrichments.json  translations_pt.json
designs/: Tela_Inicial_VOLT.html  biblioteca_plano-exercicio.html  config_volt.html  popup-exercicio.html  teino_volt.html
frontend/: app.html
scripts/: enrich_exercises.py  seed.py  translate_pt.py
