[project]
name = "exercises-dataset"
version = "1.0.0"
description = "Fitness exercises REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "argostranslate>=1.9.0",
    "openai>=2.44.0",
]
